--- a/src/main/resources/templates/Dashboard/teacher.html
+++ b/src/main/resources/templates/Dashboard/teacher.html
@@ -159,6 +159,13 @@
                 <p>Quản lý thông tin các lớp học</p>
                 <a href="/classrooms">Quản lý</a>
             </div>
+
+            <div class="dashboard-card">
+                <div class="icon">📅</div>
+                <h3>Thời Khóa Biểu</h3>
+                <p>Thời khóa biểu cho các lớp</p>
+                <a href="/timetable">Quản lý</a>
+            </div>
             
             <div class="dashboard-card">
                 <div class="icon">📊</div>
