--- a/src/main/resources/templates/Admin/index.html
+++ b/src/main/resources/templates/Admin/index.html
@@ -179,6 +179,13 @@
                 <p>Quản lý thông tin các lớp học</p>
                 <a href="/classrooms">Quản lý</a>
             </div>
+
+            <div class="dashboard-card">
+                <div class="icon">📅</div>
+                <h3>Thời Khóa Biểu</h3>
+                <p>Thời khóa biểu các lớp</p>
+                <a href="@{/timetable/{id}(id=${cls.id})}">Quản lý</a>
+            </div>
             
             <div class="dashboard-card">
                 <div class="icon">📊</div>
