--- a/src/main/resources/templates/Classroom/index.html
+++ b/src/main/resources/templates/Classroom/index.html
@@ -118,7 +118,7 @@
         </tr>
         </tbody>
     </table>
-    <a class="back-button" th:href="${teacherCount}">⬅️ Quay lại trang chủ</a>
+    <a class="back-button" th:href="@{/}">⬅️ Quay lại trang chủ</a>
 </main>
 </body>
 </html>
