cai tien chuc nang dang ki giao vien va chinh sua lai layout cho teacher va admin

--- a/src/main/resources/templates/Login/index.html
+++ b/src/main/resources/templates/Login/index.html
@@ -184,7 +184,7 @@
         
         <!-- Hiển thị thông báo thành công -->
         <div th:if="${success}" class="alert alert-success">
-            <span th:text="${success}"></span>
+            <span th:utext="${success}"></span>
         </div>
         
         <!-- Thông tin tài khoản demo -->
