--- a/src/main/resources/templates/timetable/add-schedule.html
+++ b/src/main/resources/templates/timetable/add-schedule.html
@@ -1,4 +1,3 @@
-<!-- templates/add-schedule.html -->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -6,21 +5,17 @@
     <title>Thêm Buổi Học</title>
 </head>
 <body>
-<h2>Thêm Buổi Học Cho Lớp</h2>
-<form th:action="@{'/timetable/' + ${classId} + '/add'}" th:object="${schedule}" method="post">
-    <label>Ngày trong tuần:</label>
-    <input type="text" th:field="*{dayOfWeek}"/><br/>
-
-    <label>Tiết:</label>
-    <input type="text" th:field="*{period}"/><br/>
-
-    <label>Môn học:</label>
-    <input type="text" th:field="*{subject}"/><br/>
-
-    <label>Giáo viên:</label>
-    <input type="text" th:field="*{teacherName}"/><br/>
-
-    <button type="submit">Lưu</button>
-</form>
+    <h1>Thêm Buổi Học</h1>
+    <form th:action="@{'/timetable/' + ${classId} + '/add'}" th:object="${schedule}" method="post">
+        <label>Ngày:</label>
+        <input type="text" th:field="*{dayOfWeek}" /><br/>
+        <label>Tiết:</label>
+        <input type="text" th:field="*{period}" /><br/>
+        <label>Môn học:</label>
+        <input type="text" th:field="*{subject}" /><br/>
+        <label>Giáo viên:</label>
+        <input type="text" th:field="*{teacherName}" /><br/>
+        <button type="submit">Lưu</button>
+    </form>
 </body>
 </html>
