--- a/src/main/resources/templates/Score/List.html
+++ b/src/main/resources/templates/Score/List.html
@@ -8,22 +8,39 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body class="bg-light">
-    <!-- Header -->
+    <!-- Header đơn giản -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-            <a class="navbar-brand" href="/">Quản lý học sinh</a>
+            <a class="navbar-brand" href="/">Trang Chủ</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/students">Học sinh</a>
+                        <a class="nav-link" href="/students">Học Sinh</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/scores">Điểm số</a>
+                        <a class="nav-link" href="/classrooms">Lớp Học</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/timetable">Thời Khóa Biểu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/scores">Điểm Số</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="/attendance">Điểm Danh</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/teachers">Giáo Viên</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+    
+    <!-- Main Content -->
     
     <div class="container mt-4">
         <!-- Tiêu đề trang -->
