--- a/src/main/resources/templates/Student/index.html
+++ b/src/main/resources/templates/Student/index.html
@@ -265,15 +265,28 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="/students">Học sinh</a>
+                        <a class="nav-link active" href="/students">Học Sinh</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/scores">Điểm số</a>
+                        <a class="nav-link" href="/classrooms">Lớp Học</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/timetable">Thời Khóa Biểu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/scores">Điểm Số</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="/attendance">Điểm Danh</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/teachers">Giáo Viên</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+    
     
     <!-- Main Content -->
     <div class="container mt-4">
